--- a/.github/workflows/deploy-to-s3.yaml
+++ b/.github/workflows/deploy-to-s3.yaml
@@ -1,4 +1,4 @@
-name: Deploy Terraform to S3
+name: DevSecOps - Deploy S3
 
 on:
   push:
@@ -12,12 +12,18 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Install AWS CLI
+        run: |
+          sudo apt update
+          sudo apt install awscli -y
+          aws --version
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-2
+          aws-region: us-east-1
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
@@ -28,5 +34,16 @@ jobs:
       - name: Terraform Plan
         run: terraform plan -out=tfplan
 
+      - name: Run Security Scan (tfsec)
+        run: |
+          wget https://github.com/aquasecurity/tfsec/releases/latest/download/tfsec-linux-amd64 -O tfsec
+          chmod +x tfsec
+          sudo mv tfsec /usr/local/bin/
+          tfsec .
+
       - name: Terraform Apply
         run: terraform apply -auto-approve tfplan
+
+      - name: Verify S3 Bucket and File
+        run: |
+          aws s3 ls s3://github-actions-bucket-12345/
