--- a/.github/workflows/deploy-to-s3.yaml
+++ b/.github/workflows/deploy-to-s3.yaml
@@ -12,12 +12,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Install AWS CLI
-        run: |
-          sudo apt update
-          sudo apt install awscli -y
-          aws --version
-
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
@@ -45,5 +39,4 @@ jobs:
         run: terraform apply -auto-approve tfplan
 
       - name: Verify S3 Bucket and File
-        run: |
-          aws s3 ls s3://github-actions-bucket-12345/
+        run: aws s3 ls s3://github-actions-bucket-12345/
