--- a/.github/workflows/deploy-to-s3.yaml
+++ b/.github/workflows/deploy-to-s3.yaml
@@ -1,4 +1,4 @@
-name: Deploy S3 Bucket and Upload Folder
+name: Deploy S3 Bucket and Perform Security Scan
 
 on:
   push:
@@ -6,8 +6,25 @@ on:
       - main
 
 jobs:
+  security_scan:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Install Gitleaks
+        run: |
+          wget -q https://github.com/gitleaks/gitleaks/releases/latest/download/gitleaks-linux-amd64 -O gitleaks
+          chmod +x gitleaks
+          sudo mv gitleaks /usr/local/bin/
+
+      - name: Run Security Scan on Source Folder
+        run: |
+          gitleaks detect --source=source --verbose --redact || exit 1
+
   terraform:
     runs-on: ubuntu-latest
+    needs: security_scan  # ✅ Run Terraform only if security scan passes
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
